--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Stopify</string>
+    <string name="error">Ops… Something went wrong</string>
 </resources>
